<resources>
    <string name="app_name">LineManWongnaiApp</string>
    <string name="search">Search</string>
    <string name="empty_data">Empty coin</string>
    <string name="label_no_network_error">Please check your internet connection!.</string>
    <string name="label_ok">OK</string>
    <string name="label_unknown_error">Please try again later.</string>
    <string name="label_coin_price">\$ %s</string>
    <string name="label_top">Top</string>
    <string name="label_3">3</string>
    <string name="label_rank_crypto">rank crypto</string>
    <string name="label_coin_item_list_view_header">Buy, sell and hold crypto</string>
    <string name="label_price">PRICE</string>
    <string name="label_market_cap">MARKET CAP</string>
    <string name="label_go_to_website">GO TO WEBSITE</string>
    <string name="label_coin_symbol">(%s)</string>
    <string name="label_price_million">$ %s million</string>
    <string name="label_price_billion">$ %s billion</string>
    <string name="label_price_trillion">$ %s trillion</string>
    <string name="label_sorry">Sorry</string>
    <string name="label_no_result_by_search">No result match this keyword</string>
    <string name="label_invite_friend_reason"><![CDATA[You can earn $10 when you invite a friend to buy crypto. <font color="blue">Invite your friend.</font>]]></string>

</resources>